2009-01-19  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/cifformat.cpp: Fix for PR#2100215. Difficult bug -- file is
	missing a ';' on line 189. Other CIF programs had difficulty,
	including CIFTOOLS. Handle such non-standard files by issuing
	warnings when a ; line is not properly terminated and we find a
	new tag.

2009-01-18  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* data/fragments.txt: Expanded ring template database -- 2500 of
	the most frequent rings (including three-membered rings like
	cyclopropane or epoxides). Fixes PR#2043319.

2009-01-16  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/dlhandler_unix.cpp (openLib): Handle error reporting here --
	which will allow more informative messages to users, rather than
	just "did not load properly."

	* src/obconversion.cpp: Disable error messages, as per above.

	* src/parsmart.cpp: Remove some unused code, and add comments
	towards support of fragment SMARTS, e.g. (*).(*).

2009-01-14  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/pdbformat.cpp, src/formats/pqrformat.cpp: Patch
	contributed by Pierre-Louis Bonicoli PR#2503113. Take elements
	from the PDB 'element column' in preference to guessing based on
	atom type names (which are unreliable).

2009-01-14  Noel O'Boyle  <baoilleach@gmail.com>

	* windows-vc2005/OBPythonOBF/OBPythonOBF.vcproj: Minor fix to
	outdir (had trouble with paths with spaces)
	* windows-vc2005/OBCSharp/OBCSharp.vcproj: Moving to Swig 1.3.37
	* scripts/csharp/example.py: Partial revert of r2833 to bring back my
	IronPython example script

2009-01-14  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/python/pybel.py split into pybel_py2.x.py, pybel_py3.x.py:
	Adding support for Python 3.
	* scripts/openbabel-python.i, scripts/python/examples/testpybel.py,
	scripts/python/setup.py, windows-vc2005/OBPythonOBF/setup.py: Adding
	support for Python 3.
	* windows-vc2005/OBPythonOBF/OBPythonOBF.vcproj: Moving to SWIG
	1.3.37 (need to specify -outdir).
